# uri2run

./: README.md  TODO.md  goal.yaml  pyproject.toml
examples/14_workflow_executor_mock/: ABOUT.md  README.md  task_graph.yaml
examples/15_compact_uri_flow/: ABOUT.md
output/events/workflows/: check-agent-health.jsonl  weather-agent-local-health.jsonl
tests/: conftest.py  test_protocol_transports.py  test_stream_transports.py  test_transport_matrix.py  test_voice_resolver.py
uri2run/: result.py
uri2run/transports/: http_transport.py  mock_transport.py  python_transport.py  shell_transport.py  sse_transport.py  stdio_transport.py  uri2ops_transport.py  ws_transport.py
