[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uri2run"
version = "0.1.0"
description = "URI runtime transport layer — python, shell, HTTP, flow, graph, uri2ops."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "pyyaml>=6.0", "uri2flow", "uri2ops", "uri3"]

[project.optional-dependencies]
stream = ["websockets>=12.0"]

[project.scripts]
uri2run = "uri2run.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uri2run*"]

[tool.uv.sources]
uri2flow = { git = "https://github.com/tellmesh/uri2flow.git" }
uri2ops = { git = "https://github.com/tellmesh/uri2ops.git" }
uri3 = { git = "https://github.com/tellmesh/uri3.git" }
