[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uri2run"
version = "0.1.0"
description = "URI runtime transport layer — python, shell, HTTP, flow, graph, uri2ops."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "pyyaml>=6.0", "uri2flow", "uri2ops", "uri3"]

[project.optional-dependencies]
dev = ["pytest>=7.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]
stream = ["websockets>=12.0"]
test = ["touri", "uri2voice"]

[project.scripts]
uri2run = "uri2run.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uri2run*"]

[tool.uv.sources]
uri2flow = { path = "../uri2flow", editable = true }
uri2ops = { path = "../uri2ops", editable = true }
uri3 = { path = "../uri3", editable = true }
touri = { path = "../touri", editable = true }
uri2voice = { path = "../uri2voice", editable = true }

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
